--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
       <br>
       <label for="form_songname">Song Name:</label><br>
-      <input type="text" id="form_songname" name="form_songname" >
+      <input type="text" id="form_songname" name="form_songname" required>
 
       <br><br>
       <label for="form_year">Year:</label><br>
-      <input type="number" id="form_year" name="form_year" >
+      <input type="number" id="form_year" name="form_year" required>
 
       <br><br>
       <label for="form_youtubelink">YouTube Link:</label><br>
-      <input type="text" id="form_youtubelink" name="form_youtubelink" >
+      <input type="text" id="form_youtubelink" name="form_youtubelink" required>
       
       <br><br>
       <label for="form_description">Description:</label><br>
-      <textarea id="form_description" name="form_description"></textarea >
+      <textarea id="form_description" name="form_description" required></textarea>
 
       <br><br>
       <input type="submit" value="Submmmit">
